--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="utf-8">
     <title>Test</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
     <script src="main.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body ng-app="">
+    <div class="input">Desired id: <input type="text" ng-model="id"></div>
+    <div class="click">{{id}}</div>
     <div class="content">
-      
+
     </div>
   </body>
 </html>
